@@ -9,62 +9,64 @@
 <meta http-equiv="pragma" content="no-cache">
 
 <script type="text/javascript">
-	function focusit() {
-		document.getElementById('user_login').focus();
-	}
-	window.onload = focusit;
+    window.onload = function() {
+        //set referrer
+        document.getElementById('loginform').action = document.URL;
+        //set focus on form
+        document.getElementById('user_login').focus();
+    }
 </script>
 <style type="text/css">
 
 * { margin: 0; padding: 0; }
 
 body {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	background-color: #30335c;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    background-color: #30335c;
 }
 
 form {
-	background-color: #eaf3fa;
-	margin-left: 8px;
-	padding: 16px 16px 40px 16px;
-	font-weight: bold;
-	-moz-border-radius: 5px;
-	-khtml-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
+    background-color: #eaf3fa;
+    margin-left: 8px;
+    padding: 16px 16px 40px 16px;
+    font-weight: bold;
+    -moz-border-radius: 5px;
+    -khtml-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
 }
 
 #submit {
-	float: right;
-	padding: 3px 5px;
-	border: none;
-	font-size: 13px;
-	border-width: 1px;
-	border-style: solid;
-	-moz-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-	cursor: default;
-	text-decoration: none;
-	margin-top: -6px;
-	
-	width: 70px;
-	
-	background-color: #cee1ef;
-	color: #224466;
-	border-color: #80b4d0;
+    float: right;
+    padding: 3px 5px;
+    border: none;
+    font-size: 13px;
+    border-width: 1px;
+    border-style: solid;
+    -moz-border-radius: 3px;
+    -khtml-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    cursor: default;
+    text-decoration: none;
+    margin-top: -6px;
+    
+    width: 70px;
+    
+    background-color: #cee1ef;
+    color: #224466;
+    border-color: #80b4d0;
 }
 
 form p { margin-bottom: 24px; }
 #login { width: 290px; margin: 7em auto; }
 
 #user_pass, #user_login {
-	font-size: 14px;
-	width: 97%;
-	padding: 3px;
-	margin-right: 6px;
+    font-size: 14px;
+    width: 97%;
+    padding: 3px;
+    margin-right: 6px;
 }
 </style>
 </head>
@@ -74,15 +76,18 @@ form p { margin-bottom: 24px; }
 <div id="login">
 
 <form id="loginform" action="/" method="post">
-	<p>
-		<label>Username<br>
-		<input name="user_login" id="user_login" class="input" value="" size="20" type="text"></label>
-	</p>
-	<p>
-		<label>Password<br>
-		<input name="user_pass" id="user_pass" class="input" value="" size="20" type="password"></label>
-	</p>
-	<p><button id="submit" type="submit" name="_" value="_">Log In</button></p>
+    <p>
+        <label>Username<br>
+        <input name="user_login" id="user_login" class="input" value="" size="20" type="text" /></label>
+    </p>
+    <p>
+        <label>Password<br>
+        <input name="user_pass" id="user_pass" class="input" value="" size="20" type="password" /></label>
+    </p>
+    
+    <p>
+        <button id="submit" type="submit" name="_" value="_">Log In</button>
+    </p>
 </form>
 
 </div>
