@@ -5,6 +5,7 @@
 Moritz Warning <mwarning@users.sourceforge.net>
 - rename project to P2P-GUI
 - web server now stores self generated ssl key (public.pem/private.pem)
+- add referrer mechanism to login page
 - fix --write-out-files
 aMule:
 - select right protocol version for aMule 2.2.5
@@ -13,7 +14,7 @@ Transmission:
    (fixes errors from JsonParser)
 Clutch gui:
 - update to Transmission > 1.74 Beta 1 (r8975)
-Jay gui
+Jay gui:
 - fix some broken stuff
 
 *Web-GMUI-0.1.3 (25.05.2009)
